--- a/app/views/static_pages/welcome.html.erb
+++ b/app/views/static_pages/welcome.html.erb
@@ -1,4 +1,9 @@
 <h1>Welcome to The Game of WAR!</h1>
 
-<p><%#= link_to 'Log In', login_path %></p>
+<p><%= link_to 'Log In', '#' %></p>
 <p><%= link_to 'Sign Up', signup_path %></p>
+<p><%= link_to 'View Leaderboards', leaderboard_path %></p>
+<p><%= link_to 'Rules', '#' %></p>
+<p><%= link_to 'About', '#' %></p>
+
+<%#= image_tag ('cards/10_of_clubs') %>
