--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -16,6 +16,9 @@
   <%= f.label :name %>
   <%= f.text_field :name %> <br/>
 
+  <%= f.label :user_name %>
+  <%= f.text_field :user_name %> <br/>
+
   <%= f.label :email %>
   <%= f.email_field :email %> <br />
 
