added basic login, prepping for player versus computer

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,10 +10,10 @@
 
   <body>
 
-  <%= render 'layouts/flash_notice' %>
-
-
-
-    <%= yield %>
+      <%= render 'layouts/header' %>
+      <div class="container">
+      <%= render 'layouts/flash_notice' %>
+      <%= yield %>
+    </div>
   </body>
 </html>
